@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
         id="plugin.audio.dr.dk.netradio"
-        version="1.0.0"
+        version="1.0.1"
         name="DR.dk Netradio"
-        provider-name="twinther [tommy@winther.nu]">
+        provider-name="stemann [jesper@sait.dk], twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.danishaddons" version="1.1.0"/>
@@ -12,10 +12,10 @@
         <provides>audio</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
-        <summary lang="en">Danish Broadcasting Corporation (DR) netradios</summary>
-        <summary lang="da">DR's netradio kanaler</summary>
-        <description>Lyt til en lang række af DR's radiokanaler, inkl. P1, P2 og P3.</description>
-        <description>Listen to many of DR's radiochannel, including P1, P2 and P3.</description>
+        <summary lang="da">DRs netradiokanaler</summary>
+        <summary lang="en">Danish Broadcasting Corporation (DR) Internet radio services</summary>
+        <description lang="da">Lyt til DRs radiokanaler via Internet, inkl. P1, P2, P3 og P4.</description>
+        <description lang="en">Listen to DR's radio channels via Internet, including P1, P2, P3 og P4.</description>
         <license>GPL 2.0</license>
         <platform>all</platform>
     </extension>
